@@ -3580,8 +3580,21 @@ The more interesting ones are:
 \titem{reopen-log} Reopen the log files after they were renamed.
   If the old files were not renamed before calling this command,
   they are automatically renamed to \term{"*-old.log"}. See section \ref{logfiles}.
-\titem {backup, restore, install-fallback, dump, load} You can use these
-  commands to create and restore backups.
+\titem {backup ejabberd.backup}
+  Store internal Mnesia database to a binary backup file.
+\titem {restore ejabberd.backup}
+  Restore immediately from a binary backup file the internal Mnesia database.
+  This will comsume quite some memory for big servers.
+\titem {install-fallback ejabberd.backup}
+  The binary backup file is installed as fallback:
+  it will be used to restore the database at the next ejabberd start.
+  Similar to \term{restore}, but requires less memory.
+\titem {dump ejabberd.dump}
+  Dump internal Mnesia database to a text file dump.
+\titem {load ejabberd.dump}
+  Restore immediately from a text file dump.
+  This is not recommended for big databases, as it will consume much time,
+  memory and processor. In that case it's preferable to use \term{backup} and \term{install-fallback}.
 %%More information about backuping can
 %%  be found in section~\ref{backup}.
 \titem{import-file, import-dir} \ind{migration from other software}
