@@ -1,5 +1,8 @@
 2009-01-09  Badlop  <badlop@process-one.net>
 
+	* doc/guide.tex: Improve explanation of backup commands
+	* doc/guide.html: Likewise
+
 	* src/web/ejabberd_web_admin.erl: New appearance of WebAdmin logo,
 	fixed logo-fill.
 
